Fix deprecated new Boolean usage.
Change-Id: I40b5a83d9fade97ccd14fc07cfb70ebdb03c158d
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>